@@ -1,0 +1,12 @@
+{
+    "name": "SHT1x",
+    "keywords": "sensor, humidity, temperature",
+    "description": "Based on the SHT1x from practicalarduino, updated coefficients according to the v5 datasheet. Provides a simple interface to the SHT1x series (SHT10, SHT11, SHT15) and SHT7x series (SHT71, SHT75) temperature / humidity sensors from Sensirion",
+    "repository":
+    {
+        "type": "git",
+        "url": "https://github.com/Vincent-Pang/SHT1x.git"
+    },
+    "frameworks": "arduino",
+    "platforms": "atmelavr"
+}
