@@ -1,3 +1,8 @@
+2017-08-27
+ * Updated coefficients according to the v5 datasheet
+ * Added voltage parameter to constructor
+ * Code cleanup
+
 2011-09-20
  * Conditionally include Arduino.h for compatibility with Arduino 1.0
 
